Java11でビルド後にJava8以降で実行できるパッケージングに変更